--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,22 @@ section.navigation {
   color: #fff;
   text-decoration: none;
   padding: 24px 20px;
-  display: block; }
+  display: block;
+  position: relative; }
+  .main-navigation ul.main-navigation-container li a::after {
+    position: absolute;
+    height: 1px;
+    background: #fff;
+    width: 100%;
+    content: '';
+    left: 0;
+    bottom: 0;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+    transform: scaleX(0); }
+  .main-navigation ul.main-navigation-container li a:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left; }
 
 /*PROFILE*/
 section.profile {
