--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,9 @@ body {
   background: #fff;
   margin: 0; }
 
+main {
+  padding-bottom: 150px; }
+
 .container {
   max-width: 1080px;
   width: 100%;
@@ -233,15 +236,16 @@ section.profile {
   color: #fff;
   line-height: 1.5;
   margin: 8px 0px;
-  font-size: 16px;
+  font-size: 1.25rem;
   font-weight: normal; }
   @media (max-width: 991px) {
     .profile-description h2 {
-      text-align: center; } }
+      text-align: center;
+      font-size: 1rem; } }
 
 /*WORKS*/
 .works {
-  padding: 32px 0; }
+  padding: 48px 0; }
   .works h3 {
     color: #141636; }
   .works p {
@@ -249,14 +253,77 @@ section.profile {
 
 .section-title {
   width: 100%;
-  max-width: 600px;
+  max-width: 800px;
   padding: 0 16px;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  text-align: left; }
   .section-title h1 {
-    background: linear-gradient(45deg, #3a7bd5 40%, #00d2ff 100%);
+    background: linear-gradient(45deg, #3a7bd5 0%, #00d2ff 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-size: clamp(2rem, 5vw, 2.5rem);
+    font-size: clamp(1.5rem, 3vw, 2rem);
     margin: 10px 0; }
+  .section-title p {
+    font-size: clamp(17.6px, 1vh, 20px);
+    line-height: 1.5; }
 
 /*PROJECTS*/
+.projects-container {
+  padding: 0 16px;
+  box-sizing: border-box; }
+  .projects-container article.projects-item a.project-item-container {
+    position: relative;
+    border-radius: 16px;
+    background: #f4f4f4;
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    width: 100%;
+    height: auto;
+    justify-content: space-between;
+    align-self: center;
+    box-sizing: border-box;
+    transition: width 200ms ease; }
+    .projects-container article.projects-item a.project-item-container:hover {
+      width: 99%;
+      opacity: 0.9; }
+    .projects-container article.projects-item a.project-item-container .project-text {
+      width: 30%; }
+    .projects-container article.projects-item a.project-item-container .project-image-container {
+      max-width: 640px; }
+      .projects-container article.projects-item a.project-item-container .project-image-container img {
+        display: inline-block;
+        max-width: 100%; }
+
+/*BOTTOM NAVIGATION*/
+section.navigation-mobile nav {
+  width: 100vw;
+  display: block;
+  border-top: 1px solid #eaeaea;
+  position: fixed;
+  bottom: 0;
+  background: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(10px); }
+  section.navigation-mobile nav ul.bottom-navigation {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    text-align: center;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box; }
+    section.navigation-mobile nav ul.bottom-navigation li {
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center; }
+      section.navigation-mobile nav ul.bottom-navigation li a {
+        text-decoration: none;
+        padding: 16px 0;
+        box-sizing: border-box;
+        display: block;
+        width: 100%; }
+        section.navigation-mobile nav ul.bottom-navigation li a span {
+          display: block;
+          font-size: 12px;
+          color: #222; }
