--- a/css/style.css
+++ b/css/style.css
@@ -355,18 +355,20 @@ section.profile {
   transition: width 200ms ease;
 }
 .projects-container article.projects-item a.project-item-container:hover {
-  width: 99%;
+  width: 98%;
   opacity: 0.9;
 }
 .projects-container article.projects-item a.project-item-container .project-text {
   width: 30%;
+  padding: 20px;
 }
 .projects-container article.projects-item a.project-item-container .project-image-container {
-  max-width: 640px;
+  width: auto;
 }
 .projects-container article.projects-item a.project-item-container .project-image-container img {
   display: inline-block;
   max-width: 100%;
+  height: 100%;
 }
 
 /*BOTTOM NAVIGATION*/
@@ -377,7 +379,7 @@ section.navigation-mobile nav {
   position: fixed;
   bottom: 0;
   background: rgba(255, 255, 255, 0.8);
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(8px);
 }
 section.navigation-mobile nav ul.bottom-navigation {
   display: grid;
