--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,6 @@ section.navigation {
 
 .main-navigation {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
   padding: 0 16px;
@@ -200,8 +199,9 @@ section.navigation {
   }
 }
 .main-navigation ul.main-navigation-container {
+  width: 50%;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: stretch;
   padding: 0;
   margin: 0;
@@ -251,6 +251,11 @@ section.profile {
   background-image: radial-gradient(rgb(25, 61, 124) 5%, transparent 0), linear-gradient(0deg, rgb(20, 51, 115) 0%, rgb(11, 42, 96) 58%, rgb(9, 35, 71) 100%);
   background-size: 36px 36px, 100% 100%;
 }
+@media (max-width: 991px) {
+  section.profile {
+    padding: 32px 0;
+  }
+}
 
 .profile-container {
   display: flex;
@@ -271,11 +276,26 @@ section.profile {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 991px) {
+  .profile-picture {
+    order: 1;
+  }
+}
 .profile-picture img {
   border-radius: 50%;
   width: 240px;
 }
+@media (max-width: 991px) {
+  .profile-picture img {
+    width: 180px;
+  }
+}
 
+@media (max-width: 991px) {
+  .profile-description {
+    order: 2;
+  }
+}
 .profile-description h1 {
   font-size: clamp(2rem, 5vw, 2.5rem);
   margin: 10px 0px 5px 0px;
@@ -287,14 +307,13 @@ section.profile {
   }
 }
 .profile-description h1 span {
-  background: linear-gradient(30deg, #ffbf02, #ed0082);
+  background: linear-gradient(45deg, #ed0057, #ffbf02);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 .profile-description h2 {
   color: #fff;
-  line-height: 2;
-  margin: 8px 0;
+  line-height: 1.5;
   font-size: 1.25rem;
   font-weight: normal;
 }
@@ -302,6 +321,8 @@ section.profile {
   .profile-description h2 {
     text-align: center;
     font-size: 1rem;
+    line-height: 1.5;
+    margin: 20px 0 16px 0;
   }
 }
 
@@ -344,7 +365,7 @@ section.profile {
 .projects-container article.projects-item a.project-item-container {
   position: relative;
   border-radius: 16px;
-  background: #f4f4f4;
+  background: #f9f9f9;
   display: flex;
   flex-direction: row;
   overflow: hidden;
@@ -354,6 +375,7 @@ section.profile {
   align-self: center;
   box-sizing: border-box;
   transition: width 200ms ease;
+  border: 1px solid #d5e2f7;
 }
 .projects-container article.projects-item a.project-item-container .project-text {
   width: 30%;
@@ -395,14 +417,19 @@ section.navigation-mobile nav ul.bottom-navigation li {
 }
 section.navigation-mobile nav ul.bottom-navigation li a {
   text-decoration: none;
-  padding: 16px 0;
+  padding: 8px 0;
   box-sizing: border-box;
   display: block;
   width: 100%;
 }
-section.navigation-mobile nav ul.bottom-navigation li a span {
+section.navigation-mobile nav ul.bottom-navigation li a p {
+  font-size: 32px;
+  margin: 0;
+}
+section.navigation-mobile nav ul.bottom-navigation li a p span {
   display: block;
   font-size: 12px;
+  margin-top: 4px;
   color: #222;
 }
 
