--- a/css/style.css
+++ b/css/style.css
@@ -165,12 +165,14 @@ body {
   margin: 0;
 }
 
-main {
-  padding-bottom: 150px;
+@media (max-width: 991px) {
+  main {
+    padding-bottom: 60px;
+  }
 }
 
 .container {
-  max-width: 1080px;
+  max-width: 1280px;
   width: 100%;
   margin: 0 auto;
 }
@@ -265,10 +267,12 @@ section.profile {
   padding: 0 16px;
   margin: 0 auto;
   box-sizing: border-box;
+  gap: 100px;
 }
 @media (max-width: 991px) {
   .profile-container {
     flex-direction: column;
+    gap: 0;
   }
 }
 
@@ -407,6 +411,11 @@ section.profile {
   border: 2px solid #3968bc;
   box-shadow: 0px 0.5px 0.5px hsla(0, 0%, 57%, 0.43), 0px 1.6px 1.7px -1px hsla(0, 0%, 57%, 0.4), 0px 4.3px 4.5px -2px hsla(0, 0%, 57%, 0.36), 0.1px 11px 11.6px -3px hsla(0, 0%, 57%, 0.32);
 }
+@media (max-width: 991px) {
+  .projects-container article.projects-item a.project-item-container:hover {
+    box-shadow: none;
+  }
+}
 .projects-container article.projects-item a.project-item-container .project-text {
   padding: 20px;
   display: flex;
@@ -440,6 +449,38 @@ section.profile {
   display: inline-block;
   max-width: 100%;
   height: 100%;
+}
+
+/*CONTACT*/
+section.contact {
+  padding: 32px 0 96px 0;
+  background: #e9e9e9;
+}
+section.contact .container h3 {
+  text-align: center;
+  margin: 0;
+  font-size: 24px;
+  color: #254791;
+}
+section.contact .container ul {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  gap: 15px;
+}
+section.contact .container ul li {
+  list-style: none;
+}
+section.contact .container ul li a {
+  display: block;
+}
+section.contact .container ul li a img {
+  width: 40px;
+}
+section.contact .container p {
+  text-align: center;
+  font-size: 14px;
+  color: #333;
 }
 
 /*BOTTOM NAVIGATION*/
