--- a/css/style.css
+++ b/css/style.css
@@ -446,9 +446,10 @@ section.profile {
   width: auto;
 }
 .projects-container article.projects-item a.project-item-container .project-image-container img {
-  display: inline-block;
+  display: block;
   max-width: 100%;
-  height: 100%;
+  height: auto;
+  width: auto;
 }
 
 /*CONTACT*/
