change styles in mobile navigation

--- a/css/style.css
+++ b/css/style.css
@@ -165,12 +165,6 @@ body {
   margin: 0;
 }
 
-@media (max-width: 991px) {
-  main {
-    padding-bottom: 60px;
-  }
-}
-
 .container {
   max-width: 1280px;
   width: 100%;
@@ -485,19 +479,24 @@ section.contact .container p {
 }
 
 /*BOTTOM NAVIGATION*/
+section.navigation-mobile {
+  display: flex;
+  justify-content: center;
+}
 @media (min-width: 992px) {
   section.navigation-mobile {
     display: none;
   }
 }
 section.navigation-mobile nav {
-  width: 100vw;
+  width: 90vw;
   display: block;
-  border-top: 1px solid #eaeaea;
+  border: 2px solid #fff;
   position: fixed;
-  bottom: 0;
-  background: rgba(255, 255, 255, 0.8);
+  bottom: 16px;
+  background: rgba(255, 255, 255, 0.65);
   backdrop-filter: blur(8px);
+  border-radius: 48px;
 }
 section.navigation-mobile nav ul.bottom-navigation {
   display: grid;
