--- a/css/style.css
+++ b/css/style.css
@@ -497,6 +497,7 @@ section.navigation-mobile nav {
   background: rgba(255, 255, 255, 0.65);
   backdrop-filter: blur(8px);
   border-radius: 48px;
+  box-shadow: 0px 0.5px 0.5px hsla(0, 0%, 57%, 0.43), 0px 1.6px 1.7px -1px hsla(0, 0%, 57%, 0.4), 0px 4.3px 4.5px -2px hsla(0, 0%, 57%, 0.36), 0.1px 11px 11.6px -3px hsla(0, 0%, 57%, 0.32);
 }
 section.navigation-mobile nav ul.bottom-navigation {
   display: grid;
